--- a/units/unit01_smart_ledger_launch/02_concepts.tex
+++ b/units/unit01_smart_ledger_launch/02_concepts.tex
@@ -1,1 +1,144 @@
 \section{Concepts}
+\label{sec\:unit1\_concepts}
+
+In Unit 1 you will learn how to transform raw financial transactions into a robust, self-auditing ledger. This Concepts section introduces the theoretical foundations and vocabulary that underpin every step of your project. Think of this as the story behind the spreadsheet: before you build a single formula, you need to understand what your data represents and why it matters.
+
+\subsection{Purpose and Scope of a Self-Auditing Ledger}
+Startups often operate at high speed with limited oversight. This can lead to accounting that’s inconsistent, incomplete, or just plain confusing. But to attract investors or secure loans, entrepreneurs must prove their financial records are trustworthy.
+
+A self-auditing ledger is a financial model that checks itself. When set up correctly, it can detect missing entries, flag unbalanced transactions, and verify that all accounts align with the accounting equation. It’s like a spell-checker for your books.
+
+\begin{Trivia}
+In a 2020 survey, 21% of startups admitted they had no formal bookkeeping system in their first year of operation.
+\end{Trivia}
+
+\begin{Example}
+Imagine you run a weekend juice stand. On Saturday, a friend pays you \$200 to cater a birthday picnic. You forget to record it. On Sunday, your cash total looks too low—and you don’t realize you’ve left out a key piece of income. A self-auditing ledger would help catch this error before it affects your monthly report.
+\end{Example}
+
+\subsection{The Accounting Equation}
+The fundamental rule of accounting is:
+$\text{Assets} = \text{Liabilities} + \text{Equity}$
+
+This equation ensures that what your business owns is always matched by who has a claim on those assets.
+
+\begin{Definition}
+\textbf{Assets} are things your business owns (e.g., cash, inventory, equipment).\\
+\textbf{Liabilities} are what you owe others (e.g., loans, unpaid bills).\\
+\textbf{Equity} is what’s left for the owner(s) after debts are paid.
+\end{Definition}
+
+\begin{Example}
+If your startup buys a laptop for \$1,000 using a \$400 deposit and a \$600 loan, the equation becomes:
+$\text{Assets (Laptop)} = \text{Liabilities (Loan)} + \text{Equity (Cash Paid)}$
+$1000 = 600 + 400$
+\end{Example}
+
+\subsection{Debits and Credits Mechanics}
+Debits and credits aren’t “good” or “bad”—they’re just directions: left or right. Every transaction has two sides:
+
+\begin{itemize}
+\item \textbf{Debits} increase asset and expense accounts, and decrease liabilities and equity.
+\item \textbf{Credits} increase liability and equity accounts, and decrease assets.
+\end{itemize}
+
+\begin{Tip}
+To remember this, think: \textbf{DEAL} accounts increase with debits (\textbf{D}ividends, \textbf{E}xpenses, \textbf{A}ssets, \textbf{L}osses) and \textbf{CLIP} accounts increase with credits (\textbf{C}apital, \textbf{L}iabilities, \textbf{I}ncome, \textbf{P}rofit).
+\end{Tip}
+
+\begin{Example}
+Your business pays \$75 cash for office supplies.\newline
+\textbf{Supplies Expense (Debit)}: 75\newline
+\textbf{Cash (Credit)}: 75\newline
+Even though your cash decreased, your books stay balanced.
+\end{Example}
+
+\subsection{Journal Entry Structure}
+A journal entry is the way accountants capture business activity. Each entry has:
+
+\begin{itemize}
+\item The \textbf{date} of the transaction
+\item The \textbf{accounts} affected (e.g., "Cash", "Revenue")
+\item The \textbf{amounts} recorded as debits and credits
+\item A short \textbf{description}
+\end{itemize}
+
+\begin{Example}
+\textbf{Date:} March 5\newline
+\textbf{Account:} Cash (Debit \$300)\newline
+\textbf{Account:} Service Revenue (Credit \$300)\newline
+\textbf{Description:} Received payment for tutoring session
+\end{Example}
+
+Every journal entry must keep the accounting equation in balance. This is the core idea that makes self-auditing possible.
+
+\subsection{Trial Balance as a Control Check}
+A trial balance totals all the debits and credits in your ledger to verify that everything still balances. If the result is anything other than zero, something is wrong.
+
+\begin{Definition}
+\textbf{Trial Balance:} A report that adds up all debits and subtracts all credits. If the total is zero, the books are balanced.
+\end{Definition}
+
+\begin{Warning}
+Even if your trial balance equals zero, some errors (like posting to the wrong account) can still slip through. This is a balance check—not an accuracy guarantee.
+\end{Warning}
+
+\subsection{Data Structuring Concepts}
+Messy data leads to messy thinking. When you import transactions from a CSV file, the first thing you should do is convert them into an \textbf{Excel Table}. Tables make everything easier:
+
+\begin{itemize}
+\item They auto-expand when you add new rows.
+\item They let you refer to columns by name (e.g., \verb|Table1[Debit]|).
+\item They support filters, formatting, and cleaner formulas.
+\end{itemize}
+
+\begin{Tip}
+Use \texttt{Ctrl+T} to quickly convert a range to a table.
+\end{Tip}
+
+\subsection{Aggregation Logic (SUMIF Concept)}
+To build account totals (like "Cash on hand"), we use a function called \texttt{SUMIF}. It adds up only the rows that match a condition—like “only the rows where the Account is 'Cash'.”
+
+\begin{Example}
+\verb|=SUMIF(Table1[Account], "Cash", Table1[Debit])| adds all debit amounts from rows where the account is Cash.
+\end{Example}
+
+\begin{Definition}
+\textbf{SUMIF:} A function that sums values based on a matching condition.
+\end{Definition}
+
+When used for every major account, \texttt{SUMIF} formulas replicate the effect of T-accounts and give you a snapshot of each balance.
+
+\subsection{Error-Flag Concept (Conditional Formatting)}
+Humans make mistakes—but software can help catch them. Conditional formatting adds visual rules to your spreadsheet. These rules automatically highlight cells or rows when something looks off:
+
+\begin{itemize}
+\item Flag entries where debit does not equal credit
+\item Highlight missing descriptions or dates
+\item Shade negative balances that shouldn’t be negative (e.g., Cash)
+\end{itemize}
+
+\begin{Tip}
+Use formulas in conditional formatting to make smart rules. For example, \verb|=[Debit]<>[Credit]| highlights entries that don’t balance.
+\end{Tip}
+
+\subsection{Integrated Workflow Overview}
+At this point, you’ve seen all the pieces. Here’s how they fit together:
+
+\begin{enumerate}
+\item \textbf{Import your data.} Bring in the CSV file and format it as an Excel Table.
+\item \textbf{Post journal entries.} Add debit and credit lines with full descriptions.
+\item \textbf{Use SUMIF formulas.} Summarize totals by account.
+\item \textbf{Apply error flags.} Use conditional formatting to check for mistakes.
+\item \textbf{Run the trial balance.} Confirm that debits = credits. If not, debug.
+\end{enumerate}
+
+\begin{Tip}
+Think of your trial balance as your project’s final boss. If you pass it, you’re ready to pitch.
+\end{Tip}
+
+\begin{Important}
+In a self-auditing ledger, each concept supports the next. Don’t skip the structure: clean data and logical flow are your best defense against error.
+\end{Important}
+
+\clearpage
