feat: add unit08 phase5 question bank

--- a/docs/sprint/S10.md
+++ b/docs/sprint/S10.md
@@ -19,6 +19,9 @@
   - Provide helpers for ComprehensionCheck props and random draws by lesson/tag.
   - Refactor Unit 2 student phase-5 pages to consume the shared bank and balance answer lengths.
   - Document structure following Unit 1 pattern.
+- [x] **#32 – Build Unit 8 phase-5 question bank and practice-test scaffolding** ✅ COMPLETED
+  - Added Unit 8 phase-5 assessment bank with helper utilities and balanced answer choices.
+  - Updated Unit 8 student phase-5 pages to consume centralized draws and documented the pattern extension.
 
 ## Dependencies & Sequencing
 1. **Issue #10** establishes the shared data layer and helper utilities for Unit 1. Complete before starting #11 or #12. ✅ COMPLETED
