--- a/docs/sprint/S11.md
+++ b/docs/sprint/S11.md
@@ -14,6 +14,9 @@
 - [x] **#15 – Refactor Unit 1 Lesson 1 student pages to consume component scenarios** (PR #55)
   - Introduced `scenario-to-props` adapters and the `ScenarioNarrative` renderer.
   - Replaced inline narrative/interactive data across all six student phase pages with scenario lookups.
+- [x] **#56 – Define Unit 01 Lessons 02-04 component scenarios** (PR pending)
+  - Authored lesson-specific scenario modules at `src/data/scenarios/unit01/lesson02.ts`, `lesson03.ts`, and `lesson04.ts` with complete narratives, component configs, datasets, and teacher guidance.
+  - Extended the scenario registry and schema to support journal entries, transaction journals, trial balance sorting, and Excel-focused phases.
 
 ## Active Work & Backlog
 - **Epic #104 – Expand scenario registry across Units 01-08** tracks the remaining 48 slices.
@@ -36,7 +39,7 @@
   - #23 – Enhance component usage dashboard with phase analytics
 
 ## Next Actions
-1. Kick off **#56/#57** (Unit 01 Lessons 02-04) following the Issue #14/#15 implementation pattern.
+1. Kick off **#57** (Unit 01 Lessons 02-04 student refactor) following the Issue #14/#15 implementation pattern.
 2. Extend `scenario-to-props` and registry helpers as new component types appear in upcoming lessons.
 3. Update MCP documentation immediately after each scenario migration.
 
