refactor: consume unit01 lessons 02-04 scenarios

--- a/docs/sprint/S11.md
+++ b/docs/sprint/S11.md
@@ -17,10 +17,14 @@
 - [x] **#56 – Define Unit 01 Lessons 02-04 component scenarios** (PR pending)
   - Authored lesson-specific scenario modules at `src/data/scenarios/unit01/lesson02.ts`, `lesson03.ts`, and `lesson04.ts` with complete narratives, component configs, datasets, and teacher guidance.
   - Extended the scenario registry and schema to support journal entries, transaction journals, trial balance sorting, and Excel-focused phases.
+- [x] **#57 – Refactor Unit 01 Lessons 02-04 student pages to consume scenarios** (PR pending)
+  - Replaced inline content across all six phases for lessons 02-04 with scenario-driven data and adapters.
+  - Extended `scenario-to-props` to support journal builders, transaction journals, trial balance sorting, and T-account visualizations from the registry.
+  - Ensured gradients, badges, and card layouts mirror the Lesson 01 pattern while wiring assessments to the shared question bank.
 
 ## Active Work & Backlog
 - **Epic #104 – Expand scenario registry across Units 01-08** tracks the remaining 48 slices.
-  - Unit 01: #56/#57, #58/#59, #60/#61
+  - Unit 01: ✅ #56/#57, #58/#59, #60/#61
   - Unit 02: #62/#63, #64/#65, #66/#67
   - Unit 03: #68/#69, #70/#71, #72/#73
   - Unit 04: #74/#75, #76/#77, #78/#79
@@ -39,7 +43,7 @@
   - #23 – Enhance component usage dashboard with phase analytics
 
 ## Next Actions
-1. Kick off **#57** (Unit 01 Lessons 02-04 student refactor) following the Issue #14/#15 implementation pattern.
+1. Kick off **#58** (Unit 01 Lessons 05-07 scenario data) to continue the registry build-out.
 2. Extend `scenario-to-props` and registry helpers as new component types appear in upcoming lessons.
 3. Update MCP documentation immediately after each scenario migration.
 
