--- a/docs/sprint/S11.md
+++ b/docs/sprint/S11.md
@@ -22,9 +22,14 @@
   - Extended `scenario-to-props` to support journal builders, transaction journals, trial balance sorting, and T-account visualizations from the registry.
   - Ensured gradients, badges, and card layouts mirror the Lesson 01 pattern while wiring assessments to the shared question bank.
 
+- [x] **#58 – Define Unit 01 Lessons 05-07 component scenarios** (PR pending)
+  - Authored comprehensive scenario modules at `src/data/scenarios/unit01/lesson05.ts`, `lesson06.ts`, and `lesson07.ts` with narratives, component configs, datasets, and teacher notes.
+  - Registered the new lessons in `src/data/scenarios/index.ts` so `getLessonScenario("unit01", lessonNumber)` resolves lessons 1-7 without runtime gaps.
+  - Captured advanced automation, dashboard integration, and QA production sequences to keep student and teacher surfaces aligned.
+
 ## Active Work & Backlog
 - **Epic #104 – Expand scenario registry across Units 01-08** tracks the remaining 48 slices.
-  - Unit 01: ✅ #56/#57, #58/#59, #60/#61
+  - Unit 01: ✅ #56/#57/#58, #59, #60/#61
   - Unit 02: #62/#63, #64/#65, #66/#67
   - Unit 03: #68/#69, #70/#71, #72/#73
   - Unit 04: #74/#75, #76/#77, #78/#79
@@ -43,7 +48,7 @@
   - #23 – Enhance component usage dashboard with phase analytics
 
 ## Next Actions
-1. Kick off **#58** (Unit 01 Lessons 05-07 scenario data) to continue the registry build-out.
+1. Kick off **#59** (Unit 01 Lessons 05-07 student refactor) to keep registry and pages in sync.
 2. Extend `scenario-to-props` and registry helpers as new component types appear in upcoming lessons.
 3. Update MCP documentation immediately after each scenario migration.
 
