--- a/docs/sprint/S11.md
+++ b/docs/sprint/S11.md
@@ -26,6 +26,12 @@
   - Authored comprehensive scenario modules at `src/data/scenarios/unit01/lesson05.ts`, `lesson06.ts`, and `lesson07.ts` with narratives, component configs, datasets, and teacher notes.
   - Registered the new lessons in `src/data/scenarios/index.ts` so `getLessonScenario("unit01", lessonNumber)` resolves lessons 1-7 without runtime gaps.
   - Captured advanced automation, dashboard integration, and QA production sequences to keep student and teacher surfaces aligned.
+- [x] **#60 – Define Unit 01 Lessons 08-10 component scenarios** (PR #111)
+  - Authored comprehensive scenario modules for PBL milestones 1-3 at `src/data/scenarios/unit01/lesson08.ts`, `lesson09.ts`, and `lesson10.ts`.
+  - Lesson 08: Project Definition with stakeholder analysis, workbook architecture, and acceptance criteria.
+  - Lesson 09: Prototype + Rehearsal with testing, validation, and peer feedback integration.
+  - Lesson 10: Final Presentations with authentic assessment, capstone-aligned rubrics, and reflection.
+  - Updated scenario registry to export lessons 8, 9, 10, completing Unit 01 scenario coverage.
 
 ## Active Work & Backlog
 - **Epic #104 – Expand scenario registry across Units 01-08** tracks the remaining 48 slices.
@@ -48,7 +54,7 @@
   - #23 – Enhance component usage dashboard with phase analytics
 
 ## Next Actions
-1. Kick off **#59** (Unit 01 Lessons 05-07 student refactor) to keep registry and pages in sync.
+1. Kick off **#61** (Unit 01 Lessons 08-10 student refactor) to keep registry and pages in sync.
 2. Extend `scenario-to-props` and registry helpers as new component types appear in upcoming lessons.
 3. Update MCP documentation immediately after each scenario migration.
 
