refactor: consume unit01 lessons08-10 scenarios

--- a/docs/sprint/S11.md
+++ b/docs/sprint/S11.md
@@ -32,6 +32,10 @@
   - Lesson 09: Prototype + Rehearsal with testing, validation, and peer feedback integration.
   - Lesson 10: Final Presentations with authentic assessment, capstone-aligned rubrics, and reflection.
   - Updated scenario registry to export lessons 8, 9, 10, completing Unit 01 scenario coverage.
+- [x] **#61 – Refactor Unit 01 Lessons 08-10 student pages to consume scenarios** (PR pending)
+  - Replaced hardcoded milestone copy, acceptance criteria, and component props with scenario-driven adapters across the three lesson hubs.
+  - Wired `ScenarioNarrative`, comprehension checks, fill-in-the-blank prompts, peer critique forms, and reflections through `scenario-to-props`.
+  - Normalized dataset links against shared resources and left existing adapter TODOs unchanged for future slices.
 
 ## Active Work & Backlog
 - **Epic #104 – Expand scenario registry across Units 01-08** tracks the remaining 48 slices.
@@ -54,7 +58,7 @@
   - #23 – Enhance component usage dashboard with phase analytics
 
 ## Next Actions
-1. Kick off **#61** (Unit 01 Lessons 08-10 student refactor) to keep registry and pages in sync.
+1. Kick off **#62** (Unit 02 Lessons 01-03 scenario data) to continue registry expansion.
 2. Extend `scenario-to-props` and registry helpers as new component types appear in upcoming lessons.
 3. Update MCP documentation immediately after each scenario migration.
 
