--- a/docs/sprint/S11.md
+++ b/docs/sprint/S11.md
@@ -36,11 +36,15 @@
   - Replaced hardcoded milestone copy, acceptance criteria, and component props with scenario-driven adapters across the three lesson hubs.
   - Wired `ScenarioNarrative`, comprehension checks, fill-in-the-blank prompts, peer critique forms, and reflections through `scenario-to-props`.
   - Normalized dataset links against shared resources and left existing adapter TODOs unchanged for future slices.
+- [x] **#63 – Refactor Unit 02 Lessons 01-03 student pages to consume scenarios** (PR pending)
+  - Rewired all 18 phase pages to load narrative blocks and component configs from the Unit 02 scenario modules.
+  - Extended `scenario-to-props` with drag-and-drop adapters and routed JournalEntry/TransactionJournal props directly from the registry.
+  - Standardized the six-phase layout wrappers with lesson gradients, badges, and assessment cards to match the Unit 01 pattern.
 
 ## Active Work & Backlog
-- **Epic #104 – Expand scenario registry across Units 01-08** tracks the remaining 48 slices.
+- **Epic #104 – Expand scenario registry across Units 01-08** tracks the remaining 47 slices.
   - Unit 01: ✅ #56/#57/#58, #59, #60/#61
-- Unit 02: #62/#63, #64/#65, #66/#67 (Lesson 01-03 scenario modules drafted; prep MCP sync + student refactor)
+- Unit 02: #62, #64/#65, #66/#67 (Scenario data verified for Lessons 01-03; next migrate lessons 04-10)
   - Unit 03: #68/#69, #70/#71, #72/#73
   - Unit 04: #74/#75, #76/#77, #78/#79
   - Unit 05: #80/#81, #82/#83, #84/#85
